--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -55,6 +55,7 @@
 
 
 -->
+2021-12-23: Letter grades have been submitted. Happy holidays!<br> 
 2021-11-29: <FONT color="#FF00FF"><b>Final exam time</b></FONT> has been changed to 15:00--16:40 to avoid schedule conflicts with administrative matters. The schedule appearing below in Final Exam subsection is up-to-date.<br>  
 2021-11-29: <FONT color="#FF00FF"><b>Final exam date</b></FONT> has been changed to December 13th to avoid issues from the students' dormitory checkout schedule.<br> 
 2021-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
