--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
-  <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>, to appear in <em>J. Geom. Phys.</em> <a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
+  <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>, to appear in <a href="https://doi.org/10.1016/j.geomphys.2021.104446"><em>J. Geom. Phys.</em></a> <a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
   <li>A note on Venice lemma in differential K-theory, to appear in <em>Arch. Math.</em></li>
   <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
   <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
@@ -60,8 +60,8 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
   <li>Geometric models of twisted differential K-theory I, <em><a href="https://link.springer.com/article/10.1007%2Fs40062-017-0177-z">J. Homotopy and Relat. Struct.</a></em>, <b>13</b>(1) (2018) 143--167. <a href="http://arxiv.org/abs/1602.02292">ArXiv</a></li>
   <li>A smooth variant of Hopkins-Singer differential K-theory, <em><a href="http://nyjm.albany.edu/j/2017/23-30.html">New York J. Math.</a></em>,  <b>23</b> (2017) 655--670. <a href="http://arxiv.org/abs/1607.08686">ArXiv</a></li>
  </ul>
-
-
+  
+  
 <h2><p>In preparation</p></h2>
 <ul>
   <li>Cycle maps in twisted differential K-theory, with Daniel Grady.</li>
