--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -124,24 +124,10 @@ Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br>
   Final Exam: <FONT COLOR="#C40062">15 December (Thursday) 17:00--17:50,</FONT> at E1-2 Room 306.<br>
 - Coverage: Chapter 12.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
  <br>
  
-  <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
-- Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
-- Update (2022-04-21): All sections of Chapter 4 will be covered. Please bring your photo ID (Student ID or Government ID) with you.<br>
-- Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-  The average was 36.48. The maximum score achieved by a student was 93.<br><br>
-  
- Final Exam: <FONT COLOR="#C40062">16 June (Thursday) 10:00--11:40</FONT> in-class. <br>
-- Coverage: Everything we covered in this course including all homework problems.<br>
-- Please bring your photo ID (Student ID or Government ID) with you.<br>
-- Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
- The average was 28.56. The maximum score achieved by a student was 80.<br><br>
-  -->
 
 
 <h2><p>Links</p></h2>
