--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -50,20 +50,23 @@
 
 
 <h2><p>Homework</p></h2>
-<b>Homework  #1</b> 9 problems. Due Date: March 23th (Wed).<br>
+TBA<br>
+ <!-- 
+ <b>Homework  #1</b> 9 problems. Due Date: March 23th (Wed).<br>
 Exercises in Section 1.3. p.4 #1<br>
 Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
 Exercises in Section 1.5. p.8 #1, 4, 5<br>
 Exercises in Section 1.6. p.11 #1<br>
 <br>
-
+-->
  <b>Homework  #2</b> 10 problems. Due Date: March 30th (Wed).<br>
 Exercises in Section 2.1. p.13 #1<br>
 Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
 <br>
- 
+-->
+  <!-- 
  <b>Homework  #3</b> 9 problems. Due Date: April 6th (Wed).<br>
 Exercises in Section 3.2. p.24 #2<br>
 Exercises in Section 3.3. p.25 #2<br>
@@ -108,18 +111,14 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 11.3. p.113 #1<br>
  Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
  Exercises in Section 12.2. p.121 #2<br><br>
+ -->
  
- <!--
-
-
-
-
--->
-
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
+TBA<br>
+ <!--
+ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
 - Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
 - Update (2022-04-21): The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
@@ -132,7 +131,7 @@ Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location:
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
 The average was 67.20. The maximum score achieved by a student was 94.<br><br>  
-
+-->
 
  
 
