--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,21 +45,20 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2023-03-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
- <!-- 
- <b>Homework  #1</b> 9 problems. Due Date: March 23th (Wed).<br>
+<b>Homework  #1</b> 10 problems.<br>
 Exercises in Section 1.3. p.4 #1<br>
 Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
 Exercises in Section 1.5. p.8 #1, 4, 5<br>
 Exercises in Section 1.6. p.11 #1<br>
 <br>
--->
+ 
  <!-- 
  <b>Homework  #2</b> 10 problems. Due Date: March 30th (Wed).<br>
 Exercises in Section 2.1. p.13 #1<br>
