--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,77 +45,15 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2023-03-01: Welcome!<br>
-
-
+ 
+ 
 <h2><p>Homework</p></h2>
-TBA<br>
- <!-- 
- <b>Homework  #1</b> 9 problems. Due Date: March 23th (Wed).<br>
-Exercises in Section 1.3. p.4 #1<br>
-Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
-Exercises in Section 1.5. p.8 #1, 4, 5<br>
-Exercises in Section 1.6. p.11 #1<br>
-<br>
--->
- <!-- 
- <b>Homework  #2</b> 10 problems. Due Date: March 30th (Wed).<br>
-Exercises in Section 2.1. p.13 #1<br>
-Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
-Exercises in Section 2.3. p.18 #1<br>
-Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
-<br>
--->
-  <!-- 
- <b>Homework  #3</b> 9 problems. Due Date: April 6th (Wed).<br>
-Exercises in Section 3.2. p.24 #2<br>
-Exercises in Section 3.3. p.25 #2<br>
-Exercises in Section 3.4. p.27 #1<br>
-Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
-<br> 
-
- <b>Homework  #4</b> 10 problems. Due Date: April 13th (Wed).<br>
-Exercises in Section 4.2. p.37 #2, 3, 4<br>
-Exercises in Section 4.3. p.39 #1, 2, 3<br>
-Exercises in Section 4.4. p.41 #1, 3<br>
-Exercises in Section 4.5. p.43 #1, 2<br>
-<br>  
-
- <b>Homework  #5</b> 14 problems. Due Date: April 20th (Wed)<br>
-Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
-Exercises in Section 5.3. p.51 #1<br>
-Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
-Exercises in Section 6.3. p.61 #1<br> 
-Exercises in Section 6.4. p.63 #1<br><br>
- 
-<b>Homework  #6</b> 8 problems. Due Date: May 25th (Wed)<br>
- Exercises in Section 7.1. p.68 #1, 2<br>
- Exercises in Section 7.2. p.71 #1, 2<br>
- Exercises in Section 7.3. p.73 #2, 3, 5<br>
- Exercises in Section 7.4. p.75 #1<br><br>
- 
-<b>Homework  #7</b> 16 problems. Due Date: June 8th (Wed)<br>
- Exercises in Section 8.1. p.78 #1, 2, 3<br>
- Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
- Exercises in Section 8.4. p.83 #1<br>
- Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
- Exercises in Section 9.1. p.89 #1, 2<br>
- Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
- Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
- 
- <b>Homework  #8</b> 10 problems. Will not be collected.<br>
- Exercises in Section 10.2. p.101 #1<br>
- Exercises in Section 10.3. p.104 #1, 2<br>
- Exercises in Section 11.1. p.107 #1, 2<br>
- Exercises in Section 11.2. p.110 #1, 4<br>
- Exercises in Section 11.3. p.113 #1<br>
- Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
- Exercises in Section 12.2. p.121 #2<br><br>
- -->
- 
-
+<b>Homework  #1</b> 14 problems. Due Date: March 15th (Wed).<br>
+Problems 1 to 14<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 TBA<br>
