--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,6 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2023-03-01: Welcome!<br>
@@ -50,14 +51,11 @@
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
-<!--
-<b>Homework  #1</b> 15 problems. Due Date: March 30th.<br>
+<b>Homework  #1</b> 15 problems.<br>
 Section 1.1: #2, 4, 5.<br>
 Section 1.3: #2, 3(1) to (6).<br>
 Section 1.4: #2, 3, 4, 6.<br>  
 Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
--->
 
   <!--
 <b>Homework  #2</b> 13 problems. Due Date: April 6th.<br>
