--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
@@ -53,7 +54,9 @@
  
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 14 problems. Due Date: March 15th (Wed).<br>
-Problems 1 to 14<br><br>
+Problems 1 to 14<br>
+<b>Homework  #2</b> 12 problems. Due Date: March 15th (Wed).<br>
+Problems 15 to 26<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 TBA<br>
