--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,6 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
+2023-03-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
@@ -58,15 +60,14 @@ Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
 Exercises in Section 1.5. p.8 #1, 4, 5<br>
 Exercises in Section 1.6. p.11 #1<br>
 <br>
- 
- <!-- 
- <b>Homework  #2</b> 10 problems. Due Date: March 30th (Wed).<br>
+
+<b>Homework  #2</b> 10 problems.<br>
 Exercises in Section 2.1. p.13 #1<br>
 Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
-<br>
--->
+<br> 
+ 
   <!-- 
  <b>Homework  #3</b> 9 problems. Due Date: April 6th (Wed).<br>
 Exercises in Section 3.2. p.24 #2<br>
