--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,6 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
+2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
 2023-03-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
@@ -67,21 +69,23 @@ Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
 <br> 
- 
-  <!-- 
- <b>Homework  #3</b> 9 problems. Due Date: April 6th (Wed).<br>
+
+ <b>Homework  #3</b> 9 problems.<br>
 Exercises in Section 3.2. p.24 #2<br>
 Exercises in Section 3.3. p.25 #2<br>
 Exercises in Section 3.4. p.27 #1<br>
 Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
 <br> 
 
- <b>Homework  #4</b> 10 problems. Due Date: April 13th (Wed).<br>
+ <b>Homework  #4</b> 10 problems.<br>
 Exercises in Section 4.2. p.37 #2, 3, 4<br>
 Exercises in Section 4.3. p.39 #1, 2, 3<br>
 Exercises in Section 4.4. p.41 #1, 3<br>
 Exercises in Section 4.5. p.43 #1, 2<br>
-<br>  
+<br> 
+ 
+  <!-- 
+  
 
  <b>Homework  #5</b> 14 problems. Due Date: April 20th (Wed)<br>
 Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
