--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -42,7 +42,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
   
-2023-03-26: The <b>1st midterm exam</b> will cover all materials in Chapters 3 and 4. There will be a handout consisting of 8 old national exam problems but only 1 problem will appear in the 1st midterm. (I shall leave out 3 problems for the 2nd midterm and the final exam. So for the 1st midterm, it is 1 out of 5.) In the meantime, please read the textbook thoroughly and master homework problems. 
+2023-03-26: The <b>1st midterm exam</b> will cover all materials in Chapters 3 and 4. There will be a handout consisting of 8 old national exam problems but only 1 problem will appear in the 1st midterm. (I shall leave out 3 problems for the 2nd midterm and the final exam. So for the 1st midterm, it is 1 out of 5.) In the meantime, please read the textbook thoroughly and master homework problems.<br>
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
