--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,7 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
-2022-03-30: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
@@ -115,7 +115,7 @@ Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br><br>
 -->
 
 <h2><p>Exam Schedules</p></h2>
- 1st midterm Exam: <FONT COLOR="#C40062">11 April (Tuesday),</FONT> In-class.<br>
+The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapters 1 and 2.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
