--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
@@ -122,14 +123,15 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
- <!--
- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
-- Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
-- Update (2022-04-21): The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-The average was 67.32. The maximum score achieved by a student was 95.<br><br>
+The 1st midterm exam: <FONT COLOR="#C40062">12 April (Wednesday) 17:00--17:50</FONT> in-class. <br>
+- Coverage: Chapters 1 to 4.<br>
+- Total 4 questions.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+  <br>
+ 
+ 
+ <!--TBA<br>
+The average was 67.32. The maximum score achieved by a student was 95.<br><br> 
   
   
 Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
