--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,9 +45,11 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
 2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-24: Click <a href="https://tinyurl.com/2023-1dg1geom1calc1" title="Dispute related">this link</a> to book a meeting to set up an appointment for looking at your graded 2nd midterm exam papers.<br>  
-2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-23_dispute.pdf" title="Dispute related">here</a>.<br>
+2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-28_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-20:<FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
 2023-05-20:<FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
@@ -145,18 +147,19 @@ The average was 65.10. The maximum score achieved by a student was 100.<br>
 - Coverage: Chapters 5 to 8.<br>
 - Total 4 questions.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
- <br>
- 
+The average was 70.89. The maximum score achieved by a student was 100.<br><br>
+
+  
+Final Exam: <FONT COLOR="#C40062">14 June (Wednesday) 17:00--18:40</FONT> in-class. <br>
+- Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>  
  
  <!--TBA<br>
 The average was 65.10. The maximum score achieved by a student was 100.<br>
   
-  
-Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
-- Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-The average was 67.20. The maximum score achieved by a student was 94.<br><br>  
+    
 -->
 
  
