--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,9 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-06-01 <b>Announcements</b> We won't meet on June 7th 14:00 (cf. announcement on May 11th). See the Week 14 folder of CBNU eCampus for a final exam summary video. <br>
+2023-06-01: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
+2023-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below. Note the deadline is different from usual.<br>  
 2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
 2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
@@ -85,6 +88,8 @@ Chapter 2 Problems 23 to 46<br><br>
 <b>Homework  #8</b> 24 problems. Due Date: May 24th (Wed).<br>
 Chapter 2 Problems 47 to 59<br>
 Chapter 4 Problems 1 to 11<br><br>
+<b>Homework  #9</b> 14 problems. Due Date: June 8th (Thu).<br>
+Chapter 4 Problems 12 to 25<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
@@ -96,7 +101,7 @@ The average was 77.81. The maximum score achieved by a student was 98.<br><br>
  
  Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
 - <b>Important:</b> Bring your straightedge (a ruler). You can also use a compass if you want but it is not mandatory.<br>
-- Coverage: Everything we covered in this course.<br>
+- Coverage: Everything we covered in this course up to June 1st class (p.293).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
 <br> 
