--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,10 +40,11 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-06-10: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>
 2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>
 2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-24: Click <a href="https://tinyurl.com/2023-1dg1geom1calc1" title="Dispute related">this link</a> to book a meeting to set up an appointment for looking at your graded 2nd midterm exam papers.<br>   
-2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-28_dispute.pdf" title="Dispute related">here</a>.<br>
+2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_calc1/2023-06-10_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-10: We won't meet on Monday the June 19th class for the Memorial Day make-up. Instead, the course will go online for that day's class by providing a YouTube video lecture to watch through CBNU eCampus. You will receive an email announcement for further details nearing June 6th.<br>
 2023-05-10: <FONT color="#FF00FF"><b>The final exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-05-10: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
