--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -19,7 +19,7 @@
 
 
 <h2><p>Announcements</p></h2>
-<!-- 
+<!--
 2022-06-23: Letter grades have been submitted. Enjoy your summer break.<br>
 2022-05-29: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
 2022-05-29: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
@@ -40,6 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br>   
 2023-06-10: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>
 2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>
 2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
@@ -155,6 +156,7 @@ The final exam: <FONT COLOR="#C40062">13 June (Tuesday), 15:00--15:50.</FONT> In
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
   <br> 
+The average was 38.42. The maximum score achieved by a student was 95.<br><br>  
   
 <!-- TBA<br>
 The average was 49.42. The maximum score achieved by a student was 100.<br><br>  
