--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -41,6 +41,7 @@
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br> 
 2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-05-28: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
 2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
@@ -121,7 +122,8 @@ The average was 76.39. The maximum score achieved by a student was 100.<br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br> 
+The average was 62.57. The maximum score achieved by a student was 89.<br>
+<br>  
  
 <!-- TBA<br>
 
